fix layout issues

--- a/openmetadata-ui/src/main/resources/ui/src/components/Layout/CarouselLayout/carousel-layout.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Layout/CarouselLayout/carousel-layout.less
@@ -33,38 +33,9 @@
 
 h1.ant-typography.carousel-header {
   color: @white;
-  font-weight: 700;
-  font-size: max(32px, 2.5vw);
-  line-height: 1.2;
-
-  @media screen and (min-width: 1650px) {
-    font-size: 50px;
-  }
-
-  @media screen and (min-width: 2400px) {
-    font-size: 64px;
-  }
-
-  @media screen and (min-width: 3600px) {
-    font-size: 80px;
-  }
 }
 
 .carousal-description {
   text-align: center;
   color: @grey-50;
-  font-size: max(14px, 1vw);
-  line-height: 1.5;
-
-  @media screen and (min-width: 1650px) {
-    font-size: 20px;
-  }
-
-  @media screen and (min-width: 2400px) {
-    font-size: 28px;
-  }
-
-  @media screen and (min-width: 3600px) {
-    font-size: 48px;
-  }
 }
