--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -13,6 +13,14 @@
 
 @import (reference) url('./variables.less');
 
+html {
+  font-size: 14px;
+
+  @media screen and (min-width: 1650px) {
+    font-size: 16px;
+  }
+}
+
 /* Generic */
 
 body {
